upgrade to premium button on analytics color change #17d8e2 + padlock vector graphic + Delete the Analytics text from free account + links page text alignment issue fixed

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -16,8 +16,8 @@
 .v-btn__content {
     align-items: center;
     color: inherit;
-    display: flex;
-    flex: 1 0 auto;
+    // display: flex;
+    // flex: 1 0 auto;
     justify-content: inherit;
     line-height: normal;
     position: relative;
@@ -37,20 +37,15 @@
     .v-btn__content {
         align-items: center;
         color: inherit;
-        display: flex;
-        flex: 1 0 auto;
         justify-content: inherit;
         line-height: normal;
         position: relative;
         transition: inherit;
         transition-property: opacity;
         max-width: 770px;
-    
-        overflow: hidden;
-        display: -webkit-box;
-        -webkit-line-clamp: 3;
-        -webkit-box-orient: vertical;
-        white-space: initial;
+
+        display: inline-block;
+        white-space: normal;
     }
   }
 
